--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
     <div class="naw">
       <ol>
         <li><a href="index.html">Strona główna</a></li>
-        <li><a href="Z_zasady.html">Zasady</a></li>
-        <li><a href="Z_new.html">Aktualne mecze</a></li>
-        <li><a href="Z_drabinka.html">Drabinka</a></li>
-        <li><a href="Z_uczestnicy.html">Uczestnicy</a></li>
-        <li><a href="Z_wsparcie.html">Wsparcie</a></li>
+        <li><a href="zasady/z.html">Zasady</a></li>
+        <li><a href="new/n.html">Aktualne mecze</a></li>
+        <li><a href="drabinka/d.html">Drabinka</a></li>
+        <li><a href="uczestnicy/u.html">Uczestnicy</a></li>
+        <li><a href="wsparcie/w.html">Wsparcie</a></li>
       </ol>
     </div>
     <div class="Logo">Strona główna</div>
