--- a/new/n.html
+++ b/new/n.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="PLK">
   <title>Polska Liga Klanowa</title>
-  <link rel="stylesheet" href="styl.css" type="text/css" />
+  <link rel="stylesheet" href="n_styl.css" type="text/css" />
   <script src="script.js"></script>
   <link rel="icon" type="image/png" sizes="32x32" href="../img/Logo.png">
 <body>
