--- a/zasady/z.html
+++ b/zasady/z.html
@@ -32,124 +32,130 @@
       </ol>
     </div>
     <div class="Logo"><h3>Regulamin Ligi:</h3></div>
-    <div><h1 onClick="op('Prawo'); return false;" class="Logo">1. Prawo</h1>
+    <div><h1 onClick="op('Prawo'); return false;" class="Logo">I. Prawo</h1>
       <div class="text" id="Prawo" style="display:none">
-          Uczestnicząc w Polskiej Lidze Klanowej, uczestnicy w pełni akceptują zasady i 
-postępują zgodnie z instrukcjami administracji ligi. Decyzje mogą zastąpić poniższe 
-zasady, jeśli odpowiadają one zachowaniu ducha rywalizacji. Wszystkie przypadki 
-specjalne niewymienione w tym zestawie zasad wymagają indywidualnego zbadania 
-przez kierownictwo ligi. Dodatkowo, administracja może dodać kolejne punkty do 
-regulaminu w trakcie trwania rozgrywek co zostanie jasno wymienione w informacjach.
-Stream i nagrywanie meczy: 
-Prawa do transmisji i publikacji przysługują wyłącznie osobom wyznaczonym 
-przez Administrację. Nikomu nie wolno rozpowszechniać filmów ani obrazów bez 
-zgody Administracji. Biorąc udział, każdy gracz zgadza się udostępnić PSN-ID
-Streamerzy i osoby nagrywające mecze zgadzają się nie publikować gier na 
-swoim kanale YouTube. Zapisywanie na Twitchu jest zabronione, z wyjątkiem kanału 
-Ligowego. Na potrzeby wymiany nagrana gra może być ustawiona jako „niepubliczna” 
-w YouTube. 
-Odwołanie:
-Każda drużyna ma prawo odwołać się w jakiejś sprawie, w tym celu należy 
-skontaktować się z administratorem, który pociągjnie sprawę dalej. Gwarantujemy że 
-każda nawet najmniejsza sprawa zostanie przez nas rozpatrzona, ostateczną decyzje 
+        Uczestnicząc w Polskiej Lidze Klanowej, uczestnicy w pełni akceptują zasady i
+        postępują zgodnie z instrukcjami administracji ligi. Decyzje mogą zastąpić poniższe
+        zasady, jeśli odpowiadają one zachowaniu ducha rywalizacji. Wszystkie przypadki
+        specjalne, niewymienione w tym zestawie zasad wymagają indywidualnego zbadania
+        przez kierownictwo ligi. Dodatkowo, Administracja może dodać kolejne punkty do
+        regulaminu w trakcie trwania rozgrywek co zostanie jasno wymienione w
+        informacjach. <br>
+    
+      <h2>Stream i nagrywanie meczy:</h2>
+Prawa do transmisji i publikacji przysługują wyłącznie osobom wyznaczonym przez
+Administrację. Nikomu nie wolno rozpowszechniać filmów ani obrazów bez zgody
+Administracji. Biorąc udział, każdy gracz zgadza się udostępnić swój GameID.
+Streamerzy i osoby nagrywające mecze, zgadzają się nie publikować gier na swoim
+kanale YouTube. Zapisywanie na Twitchu jest zabronione, z wyjątkiem kanału
+Ligowego. Na potrzeby wymiany nagrana gra może być ustawiona jako „niepubliczna”
+w YouTube.<br>
+
+<h2>Odwołanie:</h2>
+Każda drużyna ma prawo odwołać się w jakiejś sprawie, w tym celu należy
+skontaktować się z Administratorem, który pociągnie sprawę dalej. Gwarantujemy, że
+każda nawet najmniejsza sprawa, zostanie przez nas rozpatrzona. Ostateczną decyzje
 podejmie caly Zespół Polskiej Ligi.
+
 
       </div>
     </div>
-    <div><h1 onClick="op('Ograniczenia'); return false;" class="Logo">2. Ograniczenia</h1>
+    <div><h1 onClick="op('Ograniczenia'); return false;" class="Logo">II. Ograniczenia</h1>
       <div class="text" id="Ograniczenia" style="display:none">
-         Do drużyny zapisujemy minimalnie 10, i maksymalnie 20 graczy z tego samego 
-        klanu.
-         Do gry dopuszczeni zostaną tylko Ci gracze którzy mają przypięty emblemat 
-        zgłoszonego klanu.
-         Dozwolone jest zapisanie dwóch drużyn z jednego klanu przy wystarczającej 
-        liczbie graczy.
-         Zabronione są transfery graczy w trakcie grania turnieju
+        <a class="text2">1.</a> Do drużyny zapisujemy minimalnie 10, i maksymalnie 20 graczy z tego samego klanu.<br>
+        <a class="text2">2.</a> Do gry dopuszczeni zostaną tylko Ci gracze którzy mają przypięty emblemat zgłoszonego klanu.<br>
+        <a class="text2">3.</a> Dozwolone jest zapisanie dwóch drużyn z jednego klanu przy wystarczającej liczbie graczy.<br>
+        <a class="text2">4.</a> Zabronione są transfery graczy w trakcie grania turnieju
+        
       </div>
     </div>
-    <div><h1 onClick="op('System'); return false;" class="Logo">3. System gier</h1>
+    <div><h1 onClick="op('System'); return false;" class="Logo">III. System gier</h1>
       <div class="text" id="System" style="display:none">
-        a. Liga rozgrywana jest 7 vs 7 na X tierach w systemie 7/68.
-b. System 7/68 oznacza : liczba graczy w drużynie / suma poziomów pojazdów 
-w tej drużynie.
-c. Tryb gry to tylko i wyłącznie bitwa spotkaniowa.
-d. Czas bitwy : 10 minut.
-e. Liga rozgrywana jest na zasadzie "każdy z każdym" w systemie kołowym, 
-kolejność meczy udostępnimy odpowiednio wcześniej w #terminarz.
-f. Aktualizacja tabeli po każdym tygodniu.
+        <a class="text2">1.</a> rozgrywana jest 7 vs 7, w systemie 7/68.<br>
+        <a class="text2">2.</a> System 7/68 oznacza : liczba graczy w drużynie / suma poziomów pojazdów
+w tej drużynie.</br>
+<a class="text2">3.</a> Tryb gry to tylko i wyłącznie BITWA SPOTKANIOWA.<br>
+<a class="text2">4.</a> Czas bitwy : 10 minut.<br>
+<a class="text2">5.</a> Liga rozgrywana jest na zasadzie "każdy z każdym" w systemie kołowym,
+kolejność meczy udostępnimy odpowiednio wcześniej w #terminarz.<br>
+<a class="text2">6.</a>Aktualizacja tabeli po każdym tygodniu.
+
       </div>
     </div>
-    <div><h1 onClick="op('Warunki'); return false;" class="Logo">4. Warunki zwycięstwa</h1>
+    <div><h1 onClick="op('Warunki'); return false;" class="Logo">IV. Warunki zwycięstwa</h1>
       <div class="text" id="Warunki" style="display:none">
-        Warunkiem zwycięstwa drużyny w bitwie spotkaniowej jest:
-a. Zajęcie bazy.
-b. Zniszczenie czołgów przeciwnika.
-c. Jeżeli upłynie czas bitwy przed spełnieniem warunków a i b : Wygrywa 
-drużyna która zniszczyła więcej czołgów ( fragi ), pomimo iż ekrań koncowy 
-wyświetli DRAW, czyli remis.
-ci. Jeżeli liczba fragów w drużynie jest taka sama : Wygrywa drużyna która 
+        <a class="text2">Warunkiem zwycięstwa drużyny w bitwie spotkaniowej jest:</a><br><br>
+        <a class="text2">1.</a> Zajęcie bazy.<br>
+        <a class="text2">2.</a> Zniszczenie czołgów przeciwnika.<br>
+        <a class="text2">3.</a> Jeżeli upłynie czas bitwy przed spełnieniem warunków 1 i 2 : Wygrywa
+drużyna która zniszczyła więcej czołgów ( fragi ), pomimo iż ekran końcowy
+wyświetli DRAW, czyli remis.<br>
+<a class="text2">4.</a> Jeżeli liczba fragów w drużynie jest taka sama : Wygrywa drużyna która
 zrobiła większe uszkodzenia ( dmg ), w takiej sytuacji polecamy zrobić screena.
-d. Mecze ligowe rozgrywane są wedug zasady BO.5 ( do 3 zwycięstw ) 
       </div>
     </div>
-    <div><h1 onClick="op('Wyniki'); return false;" class="Logo">5. Wyniki</h1>
+    <div><h1 onClick="op('Wyniki'); return false;" class="Logo">V. Wyniki</h1>
       <div class="text" id="Wyniki" style="display:none">
-        Po spotkaniu wynik meczu należy przekazać na odpowiedni kanał na oficjalnym
-serwerze Ligi. W przypadku nieścisłości drużyna wygrana jest zoobowiązana do 
-zrobienia zrzutów ekranu i przesłaniu administracji.
+        Po spotkaniu wynik meczu należy wpisać w odpowiednim miejscu, na oficjalnej
+stronie Ligi. W przypadku nieścisłości drużyna wygrana jest zobowiązana do zrobienia
+zrzutów ekranu i przesłaniu administracji.
       </div>
     </div>
-    <div><h1 onClick="op('Mapy'); return false;" class="Logo">6. Mapy</h1>
+    <div><h1 onClick="op('Mapy'); return false;" class="Logo">VI. Mapy</h1>
       <div class="text" id="Mapy" style="display:none">
-        Mapy dla odpowiednich rund zostaną z góry wybrane przez zespół administracji,
-w tym mapa dogrywkowa i wrzuone na oficjalny serwer Ligi odpowiednio kilka dni 
-wcześniej.
+        Mapy dla odpowiednich rund zostaną z góry wybrane przez Zespół
+Administracji i wrzucone na oficjalny serwer Ligi odpowiednio kilka dni wcześniej.
       </div>
     </div>
-    <div><h1 onClick="op('Pokój'); return false;" class="Logo">7. Pokój szkoleniowy</h1>
+    <div><h1 onClick="op('Pokój'); return false;" class="Logo">VII. Pokój szkoleniowy</h1>
       <div class="text" id="Pokój" style="display:none">
-        a. Pokój szkoleniowy tworzy drużyna z lewej strony co będzie wynikało z tabeli
-rozgrywek.
-b. Drużyna tworząca pokój jest odpowiedzialna za otwarcie pokoju nie później 
-niż 10 minut przed planowanym rozpocząciem meczu z właściwymi 
-ustawieniami.
-c. W przypadku błędnych ustawień w pierwszej kolejności należy się dogadać 
-między sobą, jeśli nie przyniesie to rezultatu należy skontaktować się z 
-administratorem.
-d. W przypadku awarii serwera np. Gdy pokój nie startuje, lub serwer zostanie 
-czasowo zamknięty, w pierwszej kolejności należy jak najszybciej wrócić do 
-gry, otworzyć nowy pokój, zebrać osoby które należaly do tego pokoju i wybrać 
-te same czołgi, następnie poinformować administratora turnieju o sytuacji jeśli 
-czas na to pozwala. 
+        <a class="text2">1.</a> Pokój szkoleniowy tworzy drużyna z lewej strony co będzie wynikało z
+tabeli rozgrywek.<br>
+<a class="text2">2.</a> Drużyna tworząca pokój jest odpowiedzialna za otwarcie pokoju, nie
+później niż 10 minut przed planowanym rozpoczęciem meczu z właściwymi
+ustawieniami.<br>
+<a class="text2">3.</a> W przypadku błędnych ustawień w pierwszej kolejności należy się dogadać
+między sobą, jeśli nie przyniesie to rezultatu, należy skontaktować się z
+Administratorem.<br>
+<a class="text2">4.</a> W przypadku awarii serwera np. Gdy pokój nie startuje, lub serwer zostanie
+czasowo zamknięty, w pierwszej kolejności, należy jak najszybciej wrócić do
+gry, otworzyć nowy pokój, zebrać osoby które należały do tego pokoju i wybrać
+te same czołgi, następnie poinformować Administratora turnieju o sytuacji jeśli
+czas na to pozwala.
+
 <h2>Odkrywanie czołgów</h2>
-a. Drużyna z lewej strony w looby zawsze zaczyna wybór czołgów jako 
-pierwsza.
-b. Drużyna z prawej strony w lobby odpowiada swoimi wyborami czołów 
-które są kolejno wybierane.
-c. Nie jest błędem wybór dwóch, trzech czołgów wiecej niż wybrał i odsłonił 
-przeciwnik.
-d. Błędem jest wybór 7 czołgów gdy przeciwnik nie wybrał żadnego i należy to 
-zgłosić administracji.
-e. Maksymalny czas na wybranie czołgów to 5 min.
+<a class="text2">1.</a> Drużyna z lewej strony w lobby zawsze zaczyna odkrywanie czołgów
+jako pierwsza.<br>
+<a class="text2">2.</a> Błędem jest odkrycie 7 czołgów przeciwnika, zanim odkryje się swoje
+czołgi.<br>
+<a class="text2">3.</a> Maksymalny czas na wybranie czołgów to 5 min.
+
 <h2>Niekompletna / nieobecna drużyna </h2>
-a. Czas oczekiwania na nieobecną drużynę wynosi 5 minut od planowanego 
-rozpoczęcia meczu i musi być przestrzegany.
-b. Czas oczekiwania na niekompletną drużynę również wynosi 5 minut. 
-Drużyna powinna posiadać minimum 5 graczy aby rozpocząć grę.
-bi. Dopuszczamy możliwość grania w formacie 5 vs 5 i 6 vs 6 jeśli przeciwnik 
-nie zebrał wystarczającej ilości graczy, jadnak jest to jedynie forma 
-grzecznościowa na którą można się zgodzić lub nie. Nie ma takiego obowiązku 
-ze względu na poprawność taktyk i zmiany składu
+<a class="text2">1.</a> Czas oczekiwania na nieobecną drużynę wynosi 5 minut od planowanego
+rozpoczęcia meczu i musi być przestrzegany.<br>
+<a class="text2">2.</a> Czas oczekiwania na niekompletną drużynę również wynosi 5 minut.
+Drużyna powinna posiadać minimum 5 graczy, aby rozpocząć grę.<br>
+<a class="text2">3.</a> Dopuszczamy możliwość grania w formacie 5 vs 5 i 6 vs 6 jeśli przeciwnik
+nie zebrał wystarczającej ilości graczy, jednak jest to jedynie forma
+grzecznościowa na którą można się zgodzić lub nie. Nie ma takiego obowiązku
+ze względu na poprawność taktyk i zmiany składu.
       </div>
     </div>
-    <div><h1 onClick="op('czołgi'); return false;" class="Logo">8. Dozwolone czołgi</h1>
+    <div><h1 onClick="op('czołgi'); return false;" class="Logo">VIII. Dozwolone czołgi</h1>
       <div class="text" id="czołgi" style="display:none">
-        a. Wszystkie klasy czołgów są dozwolone.
-b. Dozwolone są maksymalnie 3 takie same czołgi.
-c. Dozwolone są maksymalnie 2 niszczyciele na drużynę.
-d. Dodatkowo : 
- Valour T95/FV4201 Chieftain oraz T95/FV4201 Chieftain, uznawany jest 
- za jeden i ten sam czołg, gdzie jedyną różnicą jest malowanie.
+        <a class="text2">1.</a> Wszystkie klasy czołgów są dozwolone.<br>
+        <a class="text2">2.</a> Dozwolone są maksymalnie 3 takie same czołgi.<br>
+<a class="text2">3.</a> Dozwolone są maksymalnie 2 niszczyciele na drużynę.<br>
+<a class="text2">4.</a> Dodatkowo : DOZWOLONE SĄ TYLKO CZOŁGI DRZEWKOWE!
+
+      </div>
+    </div>
+    <div><h1 onClick="op('kary'); return false;" class="Logo">IX. Kary</h1>
+      <div class="text" id="kary" style="display:none">
+        W przypadku niewłaściwego zachowania klanów / graczy będą podejmowane
+odpowiednie działania przez Administrację. Powinniśmy kierować się zdrowym
+podejściem do rywalizacji.
+
       </div>
     </div>
   </div>
