--- a/new/n.html
+++ b/new/n.html
@@ -24,6 +24,8 @@
       </ol>
     </div>
     <div class="Logo">Mecze tygodnia:</div>
+    <div class="tydzien" id="tydzien">
+    </div>
   </div>
 </body>
 
