--- a/drabinka/d.html
+++ b/drabinka/d.html
@@ -7,12 +7,13 @@
   <link rel="stylesheet" href="d_styl.css" type="text/css" />
   <script src="script.js"></script>
   <link rel="icon" type="image/png" sizes="32x32" href="../img/Logo.png">
+
 <body>
-<div class="all">
+  <div class="all">
     <div class="wstawka">
-      <div class="logo"><img src="../img/Logo.png" width="50" height="50"></img>  Polska Liga Klanowa</div>
+      <div class="logo"><img src="../img/Logo.png" width="50" height="50"></img> Polska Liga Klanowa</div>
     </div>
-    
+
     <div class="naw">
       <ol>
         <li><a href="../index.html">Strona główna</a></li>
@@ -24,6 +25,8 @@
       </ol>
     </div>
     <div class="Logo">Rozkad meczy:</div>
+  </div>
+  <div class="drabinka" id="drabinka">
   </div>
 </body>
 
