--- a/index.html
+++ b/index.html
@@ -7,12 +7,13 @@
   <link rel="stylesheet" href="styl.css" type="text/css" />
   <script src="script.js"></script>
   <link rel="icon" type="image/png" sizes="32x32" href="img/Logo.png">
+
 <body>
-<div class="all">
+  <div class="all">
     <div class="wstawka">
-      <div class="logo"><img src="img/Logo.png" width="50" height="50"></img>  Polska Liga Klanowa</div>
+      <div class="logo"><img src="img/Logo.png" width="50" height="50"></img> Polska Liga Klanowa</div>
     </div>
-    
+
     <div class="naw">
       <ol>
         <li><a href="index.html">Strona główna</a></li>
@@ -24,6 +25,11 @@
       </ol>
     </div>
     <div class="Logo">Strona główna</div>
+    <div class="text">
+      Dziękujemy wszystkim klanom za wzięcie udziału w pierwszym sezonie Polskie Ligi Klanowej.
+      Pamiętajcie, że ta strona powstaje wraz z progresem ligi, więc w pierwszym sezonie nie będzie dopracowana, ale
+      dziękujemy za wszystkie sugestie oraz zgłoszenie błędów, jeśli takowe znajdziecie.
+    </div>
   </div>
 </body>
 
