--- a/wsparcie/w.html
+++ b/wsparcie/w.html
@@ -17,7 +17,7 @@
       <ol>
         <li><a href="../index.html">Strona główna</a></li>
         <li><a href="../zasady/z.html">Zasady</a></li>
-        <li><a href="../new/n.html">Aktualne mecze</a></li>
+        <li><a href="../tydzien/t.html">Aktualne mecze</a></li>
         <li><a href="../drabinka/d.html">Drabinka</a></li>
         <li><a href="../uczestnicy/u.html">Uczestnicy</a></li>
         <li><a href="w.html">Wsparcie</a></li>
