--- a/tydzien/t.html
+++ b/tydzien/t.html
@@ -4,20 +4,21 @@
   <meta charset="UTF-8">
   <meta name="PLK">
   <title>Polska Liga Klanowa</title>
-  <link rel="stylesheet" href="n_styl.css" type="text/css" />
+  <link rel="stylesheet" href="t_styl.css" type="text/css" />
   <script src="script.js"></script>
   <link rel="icon" type="image/png" sizes="32x32" href="../img/Logo.png">
+
 <body>
-<div class="all">
+  <div class="all">
     <div class="wstawka">
-      <div class="logo"><img src="../img/Logo.png" width="50" height="50"></img>  Polska Liga Klanowa</div>
+      <div class="logo"><img src="../img/Logo.png" width="50" height="50"></img> Polska Liga Klanowa</div>
     </div>
-    
+
     <div class="naw">
       <ol>
         <li><a href="../index.html">Strona główna</a></li>
         <li><a href="../zasady/z.html">Zasady</a></li>
-        <li><a href="n.html">Aktualne mecze</a></li>
+        <li><a href="t.html">Aktualne mecze</a></li>
         <li><a href="../drabinka/d.html">Drabinka</a></li>
         <li><a href="../uczestnicy/u.html">Uczestnicy</a></li>
         <li><a href="../wsparcie/w.html">Wsparcie</a></li>
